Fixed alignment issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,7 @@
 	overflow: hidden;
 	color: var(--main-app-text-color);
 	&--page {
-		max-width: 720px;
+		max-width: 968px;
 		display: grid;
 		margin: 2vmin auto 0 auto;
 		padding: 0 $margin * 2;
