--- a/src/pages/experience/experience.scss
+++ b/src/pages/experience/experience.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables';
 
 .organisations {
-	overflow-y: scroll;
+	overflow-y: auto;
 	.organisation {
 		display: flex;
 		align-items: center;
