--- a/src/pages/skills/skills.scss
+++ b/src/pages/skills/skills.scss
@@ -12,7 +12,7 @@
 	.tags {
 		list-style: none;
 		text-align: center;
-		margin: 25px auto;
+		margin: 12px auto;
 		li {
 			display: inline-block;
 			padding: $margin;
